@@ -124,7 +124,7 @@ public class TipiProperty extends TipiVaadinComponentImpl implements PropertyCom
             m.put("propertyValue", property.getTypedValue());
             m.put("new", property.getTypedValue());
             m.put("propertyType", property.getType());
-            m.put("propertyLength", new Integer(property.getLength()));
+            m.put("propertyLength", Integer.valueOf(property.getLength()));
             
             for (int i = 0; i < myListeners.size(); i++) {
                 TipiEventListener tel = myListeners.get(i);
